<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleWeather</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="alert_neutral_button_text">OK</string>
    <string name="alert_title">Error!</string>
    <string name="alert_title_no_internet">Network Problem!</string>
    <string name="aler_message_no_internet">There is no internet connection. Reconnect and try again.</string>
    <string name="error_message">Message</string>
    <string name="error_cause">Cause</string>
    <string name="error_data">Data</string>
    <string name="error_status_code">Status Code</string>
    <string name="drawer_option_my_location">My Location</string>
    <string name="drawer_option_list">List</string>
    <string name="drawer_option_map">Map</string>
    <string name="drawer_option_settings">Settings</string>
    <string name="drawer_option_about">About</string>
    <string name="drawer_open">Open the drawer</string>
    <string name="drawer_close">Close the drawer</string>
    <string name="drawer_title">Navigation</string>
    <string name="content_description_image">Image</string>
    <string name="footer">data provided by forecast.io</string>
    <string name="loading">loading&#8230;</string>
    <string name="error_url">URL</string>
    <string name="error_timestamp">Timestamp</string>
    <string name="forecastio_api_key">31b4326b570a5734fbb335c04d1fa7bc</string>
    <string name="forecastio_api_url">https://api.forecast.io/forecast</string>
    <string name="pager_title_currently">Currently</string>
    <string name="pager_title_hourly">Hourly</string>
    <string name="pager_title_daily">Daily</string>
    <string name="title_hourly">"24 hour summary: "</string>
    <string name="title_daily">"Weekly summary: "</string>
    <string name="temperature">"Temperature: "</string>
    <string name="precip">"Precipitation: "</string>
    <string name="precip_intensity">" • Intensity: "</string>
    <string name="precip_probability">" • Probability: "</string>
    <string name="humitidy">"Humitidy: "</string>
    <string name="wind_speed">"Wind speed: "</string>
    <string name="cloud_cover">"Cloud cover: "</string>
    <string name="temperature_unit_si">" C°"</string>
    <string name="temperature_unit_us">" F°"</string>
    <string name="precip_intensity_unit_si">" mm/h"</string>
    <string name="precip_intensity_unit_us">" in/h"</string>
    <string name="wind_speed_unit_si">" m/h"</string>
    <string name="wind_speed_unit_us">" mi/h"</string>
    <string name="wind_speed_unit_ca">" km/h"</string>
    <string name="unknown_location">"Unknown location"</string>
    <string name="no_data">"No data"</string>
    <string name="created_by">"Application created by Dean Panayotov"</string>
    <string name="email">"dean@deanpanayotov.com"</string>
    <string name="data_provided_by">"Weather data provided by forecast.io"</string>
    <string name="forecast_io_website">"http://forecast.io/raw/"</string>
    <string name="version">"Version: "</string>
    <string name="version_code">"Version code: "</string>
    <string name="installed">"Installed: "</string>
    <string name="last_updated">"Last Updated: "</string>
    <string name="gps_network_not_enabled">"GPS services are not enabled. Would you like to enable them so that Simple Weather can fetch your location?"</string>
    <string name="open_location_settings">"Open Settings"</string>
    <string name="cancel">"Cancel"</string>
    <string name="no_location">"Couldn't fetch current location."</string>
    <string name="currently">"Currently: "</string>
    <string name="hourly_summary">"Hourly summary: "</string>
    <string name="daily_summary">"Daily summary: "</string>
    <string name="tap_back">Please tap BACK again to exit</string>
    <string name="percent">" %"</string>
    <string name="bullet">" • "</string>
    <string name="forecast_data_verification">"Forecast Data Verification"</string>
    <string name="simulate_missing_data">"Simulate Missing Data"</string>
    <string name="data_caching">"Database Caching"</string>
    <string name="units">"Units"</string>
    <string name="time">"Time"</string>
    <string name="summary_placeholder">"No precipitation throughout the week, with temperatures peaking at 78°F on Monday."</string>
	<string name="temperature_placeholder">"14 / 19 C"</string>
	<string name="precip_intensity_placeholder">"• Intensity: 0.012m"</string>
	<string name="precip_probability_placeholder">"• Probability: 23%"</string>
	<string name="wind_speed_placeholder">"Wind speed: 5 m/s"</string>
	<string name="cloud_cover_placeholder">"Cloud cover: 24%"</string>
	<string name="humitidy_placeholder">"Humitidy: 84%"</string>
	<string name="midnight">Midnight!</string>
	<string name="time_placeholder">23:00</string>
</resources>