<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_setings_item_padding" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/forecast_data_verification"
            android:textColor="@color/terra_abisso" />

        <Switch
            android:id="@+id/switch_validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:switchMinWidth="@dimen/activity_setings_switch_min_width"
            android:thumb="@color/terra_abisso" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_setings_item_padding" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/data_caching"
            android:textColor="@color/terra_abisso" />

        <Switch
            android:id="@+id/switch_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:switchMinWidth="@dimen/activity_setings_switch_min_width"
            android:thumb="@color/terra_abisso" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_setings_item_padding" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/simulate_missing_data"
            android:textColor="@color/terra_abisso" />

        <Switch
            android:id="@+id/switch_missing_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:switchMinWidth="@dimen/activity_setings_switch_min_width"
            android:thumb="@color/terra_abisso" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/activity_setings_item_padding" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/units"
            android:textColor="@color/terra_abisso" />

        <Switch
            android:id="@+id/switch_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:switchMinWidth="@dimen/activity_setings_switch_min_width"
            android:textOff="@string/temperature_unit_si"
            android:textOn="@string/temperature_unit_us"
            android:thumb="@color/terra_abisso" />

        <Spinner
            android:id="@+id/spinner_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>